# python-utilities

./: .gitignore  LICENSE  README.md  commands.md  pyproject.toml  requirements.txt  setup.py  test_with_pytest.py  tests.py
.github/workflows/: python-package.yml
utils/: __init__.py  array.py  color.py  config.py  date_time.py  deco.py  downloader.py  dtypes.py  error.py  file_ops.py  formatter.py  hardware.py  logger.py  maths.py  misc.py  num_ops.py  package.py  result.py  security.py  types.py  types_.py  utils.py
utils/llm/: __init__.py  dtypes.py  llm.py  msg.py  parser.py  response.py  template.py
